# ps

./: .gitignore  App.cpp  App.hpp  LICENSE  Makefile  README.md  install  main.cpp  moc_App.cpp  particle system.pro  ps.pro
includes/: CLManager.hpp  GLManager.hpp  ParticleSystem.hpp  SDLManager.hpp
ps_qt/: CMakeLists.txt
ps_qt/CL/: cl.hpp
ps_qt/includes/: psmainwindow.h
ps_qt/src/: main.cpp  psmainwindow.cpp
res/: oclSimpleGL.tar
src/: CLManager.cpp  GLManager.cpp  ParticleSystem.cpp  SDLManager.cpp  main.cpp
